refactor(message tranfer): improve message tranferring